--- a/amplify/app/src/App.css
+++ b/amplify/app/src/App.css
@@ -64,7 +64,7 @@ button {
     border-radius: 5px;
     margin-right: 2rem;
     overflow: hidden;
-    padding: 1rem;
+    /* padding: 1rem; */
     /* background: #1c1d23; */
 }
 
@@ -136,20 +136,39 @@ button {
   flex-direction: column;
   max-width: 15rem;
   /* border: solid 2px #afafaf; */
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 1rem;
   margin: 0 auto;
   /* background: #e8e8e8; */
 }
 
-.hide {
-  display: none;
+.label-form label {
+  font-size: 0.8rem;
+  color: #bbbbbb;
+  width: 100%;
 }
 
-.finish-labelling {
-  position: absolute;
-  bottom: -1rem;
-  transform: translateY(100%);
+.label-form input {
+  font-size: 0.7rem;
+  background: #222328;
+  border: none;
+  outline: none;
+  padding: 5px;
+  color: #bbbbbb;
+  border-radius: 2px;
+}
+
+.label-form select {
+  font-size: 0.7rem;
+  background: #222328;
+  border: none;
+  outline: none;
+  padding: 5px;
+  color: #bbbbbb;
+}
+
+.hide {
+  display: none;
 }
 
 .labeller-list {
@@ -159,7 +178,7 @@ button {
   min-width: 13rem;
   /* border: 1px solid; */
   border-radius: 5px;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   background: #1c1d23;
 
 }
@@ -217,6 +236,8 @@ button {
 .labeller-list-item-holder {
   overflow-y: scroll;
   height: 100%;
+  padding: 1rem;
+  height: calc(100% - 2rem);
 }
 
 input {
@@ -245,4 +266,37 @@ label {
   color: black;
   padding: 0 0.5rem;
   border-radius: 10px 0 0 0;
+}
+
+.finish-labelling{
+  width: 100%;
+  height: 2rem;
+  border-radius: 0 0 5px 5px;
+  background: #27282e;
+  color: white;
+  border: none;
+  font-size: 0.8rem;
+}
+
+.videoContainer{
+  z-index: -2;
+}
+
+video {
+  /* width: 100%; */
+  margin: 0 auto;
+  width: 80vw;
+}
+
+input[type="submit"] {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  background: #27282e;
+  color: white;
+  border: none;
+  margin: 1rem auto 0 auto;
+}
+
+.labeller-list-item-title {
+  color: white;
 }
