--- a/amplify/app/src/assets/scss/core/layout/_header.scss
+++ b/amplify/app/src/assets/scss/core/layout/_header.scss
@@ -14,7 +14,7 @@
 
 	.brand {
 		margin-right: $header-nav--padding-h;
-	}	
+	}
 }
 
 .site-header-inner {
@@ -30,6 +30,7 @@
 	.header-nav-inner {
 		display: flex;
 		flex-grow: 1;
+		justify-content: space-between;
 	}
 
     ul {
