--- a/amplify/app/src/assets/scss/theme/illustrations/_illustrations.scss
+++ b/amplify/app/src/assets/scss/theme/illustrations/_illustrations.scss
@@ -16,10 +16,10 @@
 
 // Hero illustration 01
 .illustration-section-01::after {
-	@include illustration('illustration-section-01.svg', 100%, 612px, top);
+	// @include illustration('illustration-section-01.svg', 100%, 612px, top);
 }
 
 // Hero illustration 02
 .illustration-section-02::after {
-	@include illustration('illustration-section-02.svg', 100%, 612px, top);
+	// @include illustration('illustration-section-02.svg', 100%, 612px, top);
 }
