--- a/amplify/app/src/App.css
+++ b/amplify/app/src/App.css
@@ -158,6 +158,15 @@ button {
   border-radius: 2px;
 }
 
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+select {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
 .label-form select {
   font-size: 0.7rem;
   background: #222328;
@@ -165,6 +174,7 @@ button {
   outline: none;
   padding: 5px;
   color: #bbbbbb;
+  border-radius: 2px;
 }
 
 .hide {
